--- a/scss/_definitions.scss
+++ b/scss/_definitions.scss
@@ -1,5 +1,5 @@
 /*
-	definitions
+	Definitions
 */
 
 $color-background : #ffffff;
@@ -8,54 +8,52 @@ $color-passive : #ff6a00;
 $color-active : #d45800;
 $color-hover : #ff9800;
 $color-disabled : #7f7f7f;
-$iconSize : 156px;
+$iconSize : 64px;
 
-@mixin centerIcon () {
+@mixin iconParent ($size:32) {
+	overflow : hidden;
+	position : relative;
+	text-align : left;
+	text-indent : ($size + 10) + px;
+	white-space : nowrap;
+	/* Because of Internet Explorer 8 we can't have nice thing. */
+	overflow : visible\9;
+	text-indent : -999em\9;
+}
+
+@mixin iconCenter ($size:32) {
 	content : '';
 	display : block;
-	height : 32px;
-	left : 50%;
-	margin : -16px 0 0 -16px;
+	height : $size + px;
 	position : absolute;
+	left : 50%;
+	margin-left : ($size / -2) + px;
+	margin-top : ($size / -2) + px;
 	top : 50%;
-	width : 32px;
+	width : $size + px;
 }
 
-@mixin margin ($top:'', $right:'', $bottom:'', $left:'') {
-	@if $top != '' {
-		margin-top : (16 * $top) + px;
-		margin-top : $top + rem;
-	}
-	@if $right != '' {
-		margin-right : (16 * $right) + px;
-		margin-right : $right + rem;
-	}
-	@if $bottom != '' {
-		margin-bottom : (16 * $bottom) + px;
-		margin-bottom : $bottom + rem;
-	}
-	@if $left != '' {
-		margin-left : (16 * $left) + px;
-		margin-left : $left + rem;
-	}
+@mixin rem ($name:'', $value:'') {
+	#{$name} : (16 * $value) + px;
+	#{$name} : $value + rem;
 }
 
-@mixin padding ($top:'', $right:'', $bottom:'', $left:'') {
+@mixin rems ($name:'', $top:'', $right:'', $bottom:'', $left:'') {
 	@if $top != '' {
-		padding-top : (16 * $top) + px;
-		padding-top : $top + rem;
+		#{$name}-top : (16 * $top) + px;
+		#{$name}-top : $top + rem;
 	}
 	@if $right != '' {
-		padding-right : (16 * $right) + px;
-		padding-right : $right + rem;
+		#{$name}-right : (16 * $right) + px;
+		#{$name}-right : $right + rem;
 	}
 	@if $bottom != '' {
-		padding-bottom : (16 * $bottom) + px;
-		padding-bottom : $bottom + rem;
+		#{$name}-bottom : (16 * $bottom) + px;
+		#{$name}-bottom : $bottom + rem;
 	}
 	@if $left != '' {
-		padding-left : (16 * $left) + px;
-		padding-left : $left + rem;
+		#{$name}-left : (16 * $left) + px;
+		#{$name}-left : $left + rem;
 	}
 }
 
