--- a/css/viewer.css
+++ b/css/viewer.css
@@ -3,7 +3,10 @@
 */
 @media all {
   /*
-  	definitions
+  	Definitions
+  */
+  /*
+  	Buttons
   */
   /*
   	viewer
@@ -226,17 +229,22 @@
     -moz-transition-timing-function: ease;
     -o-transition-timing-function: ease;
     transition-timing-function: ease;
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    text-indent: 58px;
+    white-space: nowrap;
+    /* Because of Internet Explorer 8 we can't have nice thing. */
+    overflow: visible;
+    text-indent: -999em;
     background-color: #ff6a00;
     border: none;
     cursor: pointer;
     height: 32px;
     margin: 0;
     opacity: 0.3;
-    overflow: hidden;
     padding: 0;
     position: absolute;
-    text-indent: 50px;
-    white-space: nowrap;
     width: 32px;
     z-index: 10;
   }
@@ -245,9 +253,10 @@
     content: '';
     display: block;
     height: 32px;
-    left: 50%;
-    margin: -16px 0 0 -16px;
     position: absolute;
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
     top: 50%;
     width: 32px;
   }
@@ -344,6 +353,14 @@
     z-index: 7;
   }
   div.viewer nav.toolbar menu button {
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    text-indent: 58px;
+    white-space: nowrap;
+    /* Because of Internet Explorer 8 we can't have nice thing. */
+    overflow: visible;
+    text-indent: -999em;
     background-color: #ff6a00;
     border: none;
     cursor: pointer;
@@ -351,10 +368,7 @@
     margin: 0;
     padding: 0;
     position: absolute;
-    overflow: hidden;
     position: absolute;
-    text-indent: 50px;
-    white-space: nowrap;
     width: 32px;
     z-index: 10;
   }
@@ -363,9 +377,10 @@
     content: '';
     display: block;
     height: 32px;
-    left: 50%;
-    margin: -16px 0 0 -16px;
     position: absolute;
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
     top: 50%;
     width: 32px;
   }
@@ -418,9 +433,10 @@
     content: '';
     display: block;
     height: 32px;
-    left: 50%;
-    margin: -16px 0 0 -16px;
     position: absolute;
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
     top: 50%;
     width: 32px;
     background-position: 50% -64px;
@@ -494,35 +510,49 @@
     z-index: 8;
   }
   div.viewer menu.slider div.meter div, div.viewer menu.slider meter div {
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    text-indent: 58px;
+    white-space: nowrap;
+    /* Because of Internet Explorer 8 we can't have nice thing. */
+    overflow: visible;
+    text-indent: -999em;
     background-color: #ff6a00;
     border: solid 1px #fff;
     display: block;
     height: 28px;
     left: 50%;
     margin: -14px 0 0 -14px;
-    overflow: hidden;
     position: absolute;
-    text-indent: 50px;
-    white-space: nowrap;
     top: 50%;
     width: 28px;
     z-index: 9;
   }
   div.viewer menu.slider div.meter div span, div.viewer menu.slider meter div span {
-    background: Transparent url(../img/viewer.png) no-repeat 0 0;
     content: '';
     display: block;
     height: 32px;
-    left: 50%;
-    margin: -16px 0 0 -16px;
     position: absolute;
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
     top: 50%;
     width: 32px;
+    background: Transparent url(../img/viewer.png) no-repeat 0 0;
   }
   div.viewer menu.slider div.meter div:hover, div.viewer menu.slider div.meter div.hover, div.viewer menu.slider meter div:hover, div.viewer menu.slider meter div.hover {
     background-color: #ff9800;
   }
   div.viewer menu.slider button {
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    text-indent: 58px;
+    white-space: nowrap;
+    /* Because of Internet Explorer 8 we can't have nice thing. */
+    overflow: visible;
+    text-indent: -999em;
     background-color: #ff6a00;
     border: none;
     cursor: pointer;
@@ -531,23 +561,21 @@
     padding: 0;
     position: absolute;
     visibility: visible;
-    overflow: hidden;
     position: absolute;
-    text-indent: 50px;
-    white-space: nowrap;
     width: 32px;
     z-index: 10;
   }
   div.viewer menu.slider button span {
-    background: Transparent url(../img/viewer.png) no-repeat 0 0;
     content: '';
     display: block;
     height: 32px;
-    left: 50%;
-    margin: -16px 0 0 -16px;
     position: absolute;
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
     top: 50%;
     width: 32px;
+    background: Transparent url(../img/viewer.png) no-repeat 0 0;
   }
   div.viewer menu.slider button:hover {
     background-color: #ff9800;
@@ -666,9 +694,10 @@
     content: '';
     display: block;
     height: 32px;
-    left: 50%;
-    margin: -16px 0 0 -16px;
     position: absolute;
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
     top: 50%;
     width: 32px;
     background-position: 50% -64px;
@@ -807,17 +836,22 @@
     width: 100%;
   }
   div.viewer nav menu.scroller button {
+    overflow: hidden;
+    position: relative;
+    text-align: left;
+    text-indent: 58px;
+    white-space: nowrap;
+    /* Because of Internet Explorer 8 we can't have nice thing. */
+    overflow: visible;
+    text-indent: -999em;
     background-color: #ff6a00;
     border: none;
     color: #fff;
     cursor: pointer;
     height: 100%;
     margin: 0;
-    overflow: hidden;
     padding: 0;
     position: absolute;
-    text-indent: 50px;
-    white-space: nowrap;
     top: 0;
     width: 40px;
     z-index: 20;
@@ -827,9 +861,10 @@
     content: '';
     display: block;
     height: 32px;
-    left: 50%;
-    margin: -16px 0 0 -16px;
     position: absolute;
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
     top: 50%;
     width: 32px;
   }
@@ -880,6 +915,7 @@
   div.viewer:hover menu.slider {
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
     opacity: 1;
+    filter: none;
     visibility: visible;
   }
   div.viewer:hover nav.buttons menu button {
@@ -909,5 +945,49 @@
   */
   div.viewer.spin_catalogue div.wrapper {
     background: #000;
+  }
+}
+@media all {
+  button, .button {
+    -webkit-transition-property: background-color;
+    -moz-transition-property: background-color;
+    -o-transition-property: background-color;
+    transition-property: background-color;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease;
+    -moz-transition-timing-function: ease;
+    -o-transition-timing-function: ease;
+    transition-timing-function: ease;
+    height: 48px;
+    height: 3rem;
+    line-height: 48px;
+    line-height: 3rem;
+    padding-top: 0px;
+    padding-top: 0rem;
+    padding-right: 16px;
+    padding-right: 1rem;
+    padding-bottom: 0px;
+    padding-bottom: 0rem;
+    padding-left: 16px;
+    padding-left: 1rem;
+    background-color: #ff6a00;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0;
+    overflow: visible;
+    text-decoration: none;
+  }
+  button:hover, .button:hover {
+    background-color: #ff9800;
+    color: #fff;
+    text-decoration: none;
+  }
+  button.disabled, button.disabled:hover, .button.disabled, .button.disabled:hover {
+    background-color: #7f7f7f;
   }
 }
