--- a/css/useful-viewer.css
+++ b/css/useful-viewer.css
@@ -961,7 +961,7 @@
   	Sections
   */
   body {
-    font-size: 16px;
+    font-size: "12px";
     font-size: 1rem;
     margin-top: 0px;
     margin-top: 0rem;
@@ -979,7 +979,7 @@
     padding-bottom: 0rem;
     padding-left: 0px;
     padding-left: 0rem;
-    line-height: 28.8px;
+    line-height: 21.6px;
     line-height: 1.8rem;
     background: #eee;
     color: #333;
@@ -988,13 +988,13 @@
   }
 
   h1, h2, h3, h4, h5, h6 {
-    font-size: 16px;
+    font-size: "12px";
     font-size: 1rem;
     margin-top: 0px;
     margin-top: 0rem;
     margin-right: 0px;
     margin-right: 0rem;
-    margin-bottom: 8px;
+    margin-bottom: 6px;
     margin-bottom: 0.5rem;
     margin-left: 0px;
     margin-left: 0rem;
@@ -1003,17 +1003,17 @@
   }
 
   h1 {
-    font-size: 30px;
+    font-size: "22.5px";
     font-size: 1.875rem;
   }
 
   h2 {
-    font-size: 26px;
+    font-size: "19.5px";
     font-size: 1.625rem;
   }
 
   h3 {
-    font-size: 20px;
+    font-size: "15px";
     font-size: 1.25rem;
   }
 
@@ -1030,17 +1030,17 @@
   	Grouping content
   */
   p {
-    font-size: 16px;
+    font-size: "12px";
     font-size: 1rem;
     display: block;
   }
 
   hr {
-    margin-top: 16px;
+    margin-top: 12px;
     margin-top: 1rem;
     margin-right: 0px;
     margin-right: 0rem;
-    margin-bottom: 16px;
+    margin-bottom: 12px;
     margin-bottom: 1rem;
     margin-left: 0px;
     margin-left: 0rem;
@@ -1058,9 +1058,9 @@
     margin-top: 0rem;
     margin-right: 0px;
     margin-right: 0rem;
-    margin-bottom: 16px;
+    margin-bottom: 12px;
     margin-bottom: 1rem;
-    margin-left: 32px;
+    margin-left: 24px;
     margin-left: 2rem;
     padding-top: 0px;
     padding-top: 0rem;
@@ -1078,7 +1078,7 @@
     margin-top: 0rem;
     margin-right: 0px;
     margin-right: 0rem;
-    margin-bottom: 16px;
+    margin-bottom: 12px;
     margin-bottom: 1rem;
     margin-left: 0px;
     margin-left: 0rem;
@@ -1157,7 +1157,7 @@
     margin-top: 0rem;
     margin-right: 0px;
     margin-right: 0rem;
-    margin-bottom: 16px;
+    margin-bottom: 12px;
     margin-bottom: 1rem;
     margin-left: 0px;
     margin-left: 0rem;
@@ -1165,7 +1165,7 @@
   }
 
   caption {
-    font-size: 20px;
+    font-size: "15px";
     font-size: 1.25rem;
     font-weight: bold;
     text-align: left;
@@ -1174,9 +1174,28 @@
   tr {
     vertical-align: top;
   }
+  tr:nth-child(2n) {
+    background-color: #eeeeee;
+  }
 
-  th {
+  th, td {
+    padding-top: 6px;
+    padding-top: 0.5rem;
+    padding-right: 12px;
+    padding-right: 1rem;
+    padding-bottom: 6px;
+    padding-bottom: 0.5rem;
+    padding-left: 12px;
+    padding-left: 1rem;
+  }
+
+  th, th a, th a:hover {
+    background-color: #ff9800;
+    color: #fff;
+    font-weight: normal;
+    white-space: nowrap;
     text-align: left;
+    text-decoration: none;
   }
 
   /*
@@ -1198,7 +1217,7 @@
     margin-top: 0rem;
     margin-right: 0px;
     margin-right: 0rem;
-    margin-bottom: 16px;
+    margin-bottom: 12px;
     margin-bottom: 1rem;
     margin-left: 0px;
     margin-left: 0rem;
@@ -1219,7 +1238,7 @@
     margin-top: 0rem;
     margin-right: 0px;
     margin-right: 0rem;
-    margin-bottom: 8px;
+    margin-bottom: 6px;
     margin-bottom: 0.5rem;
     margin-left: 0px;
     margin-left: 0rem;
@@ -1228,7 +1247,7 @@
   }
 
   input, button, select, textarea {
-    font-size: 16px;
+    font-size: "12px";
     font-size: 1rem;
     font-family: Tahoma, Verdana, Arial, Sans-Serif;
     vertical-align: baseline;
@@ -1238,17 +1257,17 @@
     -webkit-box-shadow: inset 0 0 5px #cccccc;
     -moz-box-shadow: inset 0 0 5px #cccccc;
     box-shadow: inset 0 0 5px #cccccc;
-    height: 48px;
+    height: 36px;
     height: 3rem;
-    font-size: 16px;
+    font-size: 12px;
     font-size: 1rem;
-    padding: 11.2px;
+    padding: 8.4px;
     padding: 0.7rem;
-    margin-top: 11.2px;
+    margin-top: 8.4px;
     margin-top: 0.7rem;
     margin-right: 0px;
     margin-right: 0rem;
-    margin-bottom: 11.2px;
+    margin-bottom: 8.4px;
     margin-bottom: 0.7rem;
     margin-left: 0px;
     margin-left: 0rem;
@@ -1258,27 +1277,27 @@
   }
 
   input[type=checkbox], input[type=radio] {
-    margin-top: 11.2px;
+    margin-top: 8.4px;
     margin-top: 0.7rem;
-    margin-right: 4.8px;
+    margin-right: 3.6px;
     margin-right: 0.3rem;
-    margin-bottom: 11.2px;
+    margin-bottom: 8.4px;
     margin-bottom: 0.7rem;
     margin-left: 0px;
     margin-left: 0rem;
   }
 
   select {
-    height: 48px;
+    height: 36px;
     height: 3rem;
-    padding: 11.2px;
+    padding: 8.4px;
     padding: 0.7rem;
   }
 
   textarea {
-    height: 160px;
+    height: 120px;
     height: 10rem;
-    padding: 11.2px;
+    padding: 8.4px;
     padding: 0.7rem;
   }
 
@@ -1295,9 +1314,9 @@
     -moz-transition-timing-function: ease;
     -o-transition-timing-function: ease;
     transition-timing-function: ease;
-    height: 48px;
+    height: 36px;
     height: 3rem;
-    line-height: 48px;
+    line-height: 36px;
     line-height: 3rem;
     margin-top: 0px;
     margin-top: 0rem;
@@ -1309,11 +1328,11 @@
     margin-left: 0rem;
     padding-top: 0px;
     padding-top: 0rem;
-    padding-right: 16px;
+    padding-right: 12px;
     padding-right: 1rem;
     padding-bottom: 0px;
     padding-bottom: 0rem;
-    padding-left: 16px;
+    padding-left: 12px;
     padding-left: 1rem;
     background-color: #ff6a00;
     border: none;
