--- a/inc/css/useful-viewer.css
+++ b/inc/css/useful-viewer.css
@@ -1,29 +1,29 @@
 /*
-	Constants
+Constants
 */
 /*
-	Hides text in the margin
+Hides text in the margin
 */
 /*
-	Turns a button into an icon
+Turns a button into an icon
 */
 /*
-	Centres a graphic or glyph inside an icon
+Centres a graphic or glyph inside an icon
 */
 /*
-	Offers both the pixel and rem value of a single property
+Offers both the pixel and rem value of a single property
 */
 /*
-	Offers both the pixel and rem values of a shorthand property
+Offers both the pixel and rem values of a shorthand property
 */
 /*
-	Offers the text size as both the pixel and rem value
+Offers the text size as both the pixel and rem value
 */
 /*
-	Adds vendor prefixed to a property
+Adds vendor prefixed to a property
 */
 /*
-	Applies the "clearfix" hack to a container with floating content
+Applies the "clearfix" hack to a container with floating content
 */
 /*
 	viewer
@@ -53,7 +53,7 @@ div.viewer div.wrapper {
   width: 100%;
   z-index: 0;
 }
-/* line 25, ../../src/scss/_main.scss */
+/* line 24, ../../src/scss/_main.scss */
 div.viewer div.wrapper div.background,
 div.viewer div.wrapper div.canvas {
   background: Transparent;
@@ -96,7 +96,7 @@ div.viewer div.wrapper div.canvas figure img.tile_hidden {
 /* line 51, ../../src/scss/_main.scss */
 div.viewer div.wrapper div.background figure img.tile_visible,
 div.viewer div.wrapper div.canvas figure img.tile_visible {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 /* line 55, ../../src/scss/_main.scss */
@@ -125,7 +125,7 @@ div.viewer div.wrapper div.canvas .figure_fadeout {
 /* line 68, ../../src/scss/_main.scss */
 div.viewer div.wrapper div.background .figure_fadein,
 div.viewer div.wrapper div.canvas .figure_fadein {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
   -webkit-transition-property: opacity;
   transition-property: opacity;
@@ -180,10 +180,10 @@ div.viewer div.wrapper div.canvas.canvas_hidden {
   -webkit-transition-timing-function: ease;
   transition-timing-function: ease;
 }
-/* line 104, ../../src/scss/_main.scss */
+/* line 103, ../../src/scss/_main.scss */
 div.viewer div.wrapper:hover div.canvas.canvas_hidden,
 div.viewer div.wrapper div.canvas.canvas_visible {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
   -webkit-transition-property: opacity;
   transition-property: opacity;
@@ -211,7 +211,7 @@ div.viewer div.cover {
 */
 /* line 127, ../../src/scss/_main.scss */
 div.viewer:hover div.canvas.canvas_hidden {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
   -webkit-transition-property: opacity;
   transition-property: opacity;
@@ -222,13 +222,13 @@ div.viewer:hover div.canvas.canvas_hidden {
 }
 /* line 133, ../../src/scss/_main.scss */
 div.viewer:hover nav.toolbar {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
   visibility: visible;
 }
 /* line 137, ../../src/scss/_main.scss */
 div.viewer:hover menu.slider {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
   -webkit-filter: none;
           filter: none;
@@ -236,7 +236,7 @@ div.viewer:hover menu.slider {
 }
 /* line 144, ../../src/scss/_main.scss */
 div.viewer:hover nav.buttons menu button {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 
@@ -924,7 +924,7 @@ div.viewer nav.thumbnails div ul li a {
 }
 /* line 38, ../../src/scss/_thumbnails.scss */
 div.viewer nav.thumbnails div ul li a img {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
   -webkit-transition-property: opacity;
   transition-property: opacity;
@@ -945,7 +945,7 @@ div.viewer nav.thumbnails div ul li a img {
 }
 /* line 55, ../../src/scss/_thumbnails.scss */
 div.viewer nav.thumbnails div ul li a:hover img {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
   opacity: 1;
 }
 /* line 59, ../../src/scss/_thumbnails.scss */
